Added hero counter services animation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- hero section -->
-    <section class=" bg-secondary d-flex justify-content-center overflow-hidden">
+    <section class="bg-secondary d-flex justify-content-center overflow-hidden">
       <div
         class="hero-csoz container-xl  min-vh-100 justify-content-center position-relative"
       >
@@ -65,37 +65,37 @@
           class="col-lg-8 herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex">
+          <div class="werow-csoz d-flex banner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">Welcome &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
               To Flexiata
             </h5>
           </div>
-            <h1>
+            <h1 class="mainText-gsp">
               A Place <span>Where Your <br /></span>
               <span>IDEAS</span> <span class="sptext-csoz">GROW</span> 
             </h1>
-            <p class="lh-lg w-50">
+            <p class="lh-lg w-50 mainText-gsp">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
               ad minim veniam
             </p>
             <button
               type="button"
-              class="btn btn-primary text-light fw-bold px-5 py-3"
+              class="btn btn-primary text-light fw-bold px-5 py-3 buttonm-gsp"
             >
               CONTACT US
             </button>
         </div>
         <div
-          class="heroimge-csoz col-4 justify-content-end d-none d-lg-flex ps-0"
+          class="heroimge-csoz col-4 justify-content-end d-none d-lg-flex ps-0 rgcol-gsp"
         >
           <div class="box bg-altdark flex-shrink-0 flex-grow-0">
             <img src="./assets/img/FLEXIATA.png" alt="flexiata" />
             <img
               src="./assets/img/heroImage.png"
               alt="hero image"
-              class="abimage-csoz"
+              class="abimage-csoz rgcolimg-gsp"
             />
           </div>
         </div>
@@ -103,7 +103,7 @@
       </div>  
 
         <!-- scroll mouse section -->
-        <div class="scroll-csoz d-none d-lg-block">
+        <div class="scroll-csoz d-none d-lg-block mouse-gsp">
           <a href="#clients" class="text-decoration-none">
             <img src="./assets/img/mouse.png" alt="scroll mouse">
             <h5 class="fw-bold">Scroll</h5>
@@ -114,28 +114,28 @@
     </section>
 
     <!-- client section -->
-    <section id="clients">
+    <section id="clients" class="second-section">
       <div class="container-xl row m-auto py-5">
-        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/google.png" alt="google"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/slack.png" alt="slack"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/google.png" alt="google"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
       </div>
     </section>
 
     <!-- our services -->
-    <section class="services-section bg-secondary overflow-hidden">
+    <section class="services-section bg-secondary overflow-hidden third-section">
       <div class="serives-csoz container-xl ">
-        <div class="werow-csoz serrow-csoz d-flex">
+        <div class="werow-csoz serrow-csoz d-flex sebanner-gsp">
           <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
           <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
             SERVICES
           </h5>
         </div>
         <div class="w-75 content text-start">
-          <h1 class="fw-bold text-altlight">We Provide IT Solutions</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
+          <h1 class="fw-bold text-altlight setitle-gsp">We Provide IT Solutions</h1>
+          <p class="separa-gsp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 g-lg-5 mt-4">
           <div class="col col-lg-4">
@@ -216,7 +216,7 @@
           </div>
         </div>
         <!-- section absolute image  -->
-        <div class="section-image-csoz d-none d-md-block">
+        <div class="section-image-csoz d-none d-md-block sebgimg-gsp">
           <img  src="./assets/img/services_sec.png" alt="services section">
         </div>
       </div>
@@ -721,7 +721,23 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <!-- gsap CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
+      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./assets/js/main.js"></script> 
     <script src="./assets/js/counter.js"></script> <!--counter-->
+
+    <!-- gsap animation scripts -->
+    <script src="./assets/js/animation/main.js"></script>
   </body>
 </html>
