added home page animations and added footer navigation

--- a/contactus.html
+++ b/contactus.html
@@ -226,11 +226,11 @@
                 <h5 class="text-light fw-bold">Quick Links</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Home</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Services</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Portfolio</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">About</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Contact Us</a></li>
+                <li class="py-2"><a href="./index.html" class="text-decoration-none text-light">Home</a></li>
+                <li class="py-2"><a href="./services.html" class="text-decoration-none text-light">Services</a></li>
+                <li class="py-2"><a href="./portfolio.html" class="text-decoration-none text-light">Portfolio</a></li>
+                <li class="py-2"><a href="./aboutus.html" class="text-decoration-none text-light">About</a></li>
+                <li class="py-2"><a href="./contactus.html" class="text-decoration-none text-light">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
@@ -238,12 +238,12 @@
                 <h5 class="text-light fw-bold">Services</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="text-light p-2">Development and Consultancy</li>
-                <li class="text-light p-2">Cloud Migration</li>
-                <li class="text-light p-2">Ecommerce</li>
-                <li class="text-light p-2">Web Development</li>
-                <li class="text-light p-2">UI/UX Design</li>
-                <li class="text-light p-2">SEO Service</li>
+                <li class="text-light py-2">Development and Consultancy</li>
+                <li class="text-light py-2">Cloud Migration</li>
+                <li class="text-light py-2">Ecommerce</li>
+                <li class="text-light py-2">Web Development</li>
+                <li class="text-light py-2">UI/UX Design</li>
+                <li class="text-light py-2">SEO Service</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
