--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <p class="separa-gsp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 g-lg-5 mt-4">
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class=" card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg viewBox="0 0 78 88" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -150,7 +150,7 @@
             <a href="#">Learn more <i class="bi bi-chevron-compact-right"></i></a>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class="card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg viewBox="0 0 87 87" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,7 +162,7 @@
             <a href="#">Learn more <i class="bi bi-chevron-compact-right"></i></a>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class="card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg viewBox="0 0 104 93" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -175,7 +175,7 @@
             <a href="#">Learn more <i class="bi bi-chevron-compact-right"></i></a>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class="card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg  viewBox="0 0 97 87" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -188,7 +188,7 @@
             <a href="#">Learn more <i class="bi bi-chevron-compact-right"></i></a>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class="card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg viewBox="0 0 91 91" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,7 +201,7 @@
             <a href="#">Learn more <i class="bi bi-chevron-compact-right"></i></a>
             </div>
           </div>
-          <div class="col col-lg-4">
+          <div class="col col-lg-4 colani-gsp">
             <div class="card-csoz p-4 rounded border bg-light">
               <div class="img-co">
                 <svg viewBox="0 0 77 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -228,18 +228,18 @@
     </section>
 
     <!-- why choose use section -->
-    <section>
+    <section class="fourth-section">
       <div class="container-xl choose-csoz">
         <div class="row justify-content-center">
           <div class="col-lg-8 col text-center">
-            <h1 class="fw-bold text-altlight">Why You Choose Us</h1>
-            <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus nam animi voluptatibus, hic obcaecati et quis veritatis, alias minus in, nobis quaerat beatae architecto non sequi provident molestias excepturi totam.</p>
+            <h1 class="fw-bold text-altlight secmain-gsp">Why You Choose Us</h1>
+            <p class="secmain-gsp">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus nam animi voluptatibus, hic obcaecati et quis veritatis, alias minus in, nobis quaerat beatae architecto non sequi provident molestias excepturi totam.</p>
           </div>
         </div>
        
           <div class="nav nav-pills nav-fill gap-3 mt-5" id="nav-tab" role="tablist">
             <button
-              class="whybut-csoz nav-link"
+              class="whybut-csoz nav-link whybut-gsp"
               id="nav-home-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-home"
@@ -252,7 +252,7 @@
             </button>
   
             <button
-              class="whybut-csoz nav-link active"
+              class="whybut-csoz nav-link active whybut-gsp"
               id="nav-profile-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-profile"
@@ -266,7 +266,7 @@
             </button>
   
             <button
-              class="whybut-csoz nav-link"
+              class="whybut-csoz nav-link whybut-gsp"
               id="nav-contact-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-contact"
@@ -341,36 +341,36 @@
           >
           <div class="row">
             <div class="col-4 d-none d-md-block">
-              <img src="./assets/img/chooseUs/01.png" class="img-fluid" alt="save_time_n_effort">
+              <img src="./assets/img/chooseUs/01.png" class="img-fluid imgwhy-gsp" alt="save_time_n_effort">
             </div>
             <div class="col-12 col-md-8">
               <div class="row row-cols-1 row-cols-sm-2 g-4">
-                <div class="col">
+                <div class="col secwhy-gsp">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
                 </div>
-                <div class="col">
+                <div class="col secwhy-gsp">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col">
+                </div><div class="col secwhy-gsp">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col">
+                </div><div class="col secwhy-gsp">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col">
+                </div><div class="col secwhy-gsp">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
@@ -378,7 +378,7 @@
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
                 </div>
               </div>
-              <button class="btn btn-serdark mt-4 px-4 btn-csoz">Read More <i class="bi bi-chevron-compact-right"></i></button>
+              <button class="btn btn-serdark mt-4 px-4 btn-csoz secwhy-gsp">Read More <i class="bi bi-chevron-compact-right"></i></button>
             </div>
           </div>
           </div>
@@ -458,44 +458,44 @@
     </section>
 
     <!-- our works section -->
-    <section class="bg-secondary overflow-hidden position-relative">
+    <section class="bg-secondary overflow-hidden position-relative sixth-section">
       <div class="worksec-csoz container-xl">
-        <div class="werow-csoz serrow-csoz d-flex">
+        <div class="werow-csoz serrow-csoz d-flex ourbanner-gsp">
           <h5 class="fw-bold fs-6 text-uppercase">Our &nbsp;</h5>
           <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
             Works
           </h5>
         </div>
         <div class="content">
-          <h1 class="fw-bold text-altlight">Our Works Will Speaks It selves</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
+          <h1 class="fw-bold text-altlight ourTitle-gsp">Our Works Will Speaks It selves</h1>
+          <p class="ourpara-gsp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
         <div class="imcon-csoz row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5">
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 489.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 489.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 490.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 490.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 491.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 491.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 492.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 492.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 493.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 493.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
           <div class="col col-sm-6 col-md-4 text-center rounded">
-            <img src="./assets/img/works/Rectangle 494.png" class="imgorwo-csoz" alt="">
+            <img src="./assets/img/works/Rectangle 494.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
         </div>
         <div class="d-flex justify-content-center mt-5">
-          <button class="btn redbut-csoz px-4 text-light">Read More</button>
+          <button class="btn redbut-csoz px-4 text-light serbut-gsp">Read More</button>
         </div>
       </div>
       <div class="abim-csoz">
-        <img src="./assets/img/works/boxes.png" class="img-fluid" alt="boxes">
+        <img src="./assets/img/works/boxes.png" class="img-fluid bgimg-gsp" alt="boxes">
       </div>
     </section>
 
@@ -595,25 +595,25 @@
    </section>
 
    <!-- lets start section -->
-   <section class="bg-secondary pb-5">
+   <section class="bg-secondary pb-5 eight-section">
      <div class="container-fluid">
        <div class="row">
          <div class="col-lg-2 d-none d-lg-flex justify-content-center align-items-center position-relative">
-          <div class="werow-csoz serrow-csoz d-flex rota-csoz">
+          <div class="werow-csoz serrow-csoz d-flex rota-csoz letbanner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">JUST &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
                ASK 
             </h5>
           </div>
          </div>
-         <div class="col-12 col-lg-8 pe-lg-0">
+         <div class="col-12 col-lg-8 pe-lg-0 letsMainc-gsp">
           <div class="rounded p-5 text-center text-light letscs-csoz">
-            <h1>Let’s start our <span>first step</span> to grow together </h1>
+            <h1 class="lets-gsp">Let’s start our <span>first step</span> to grow together </h1>
             <p>Do you know what it takes to grow your business online? <br/>Do you want to?</p>
             <a class="btn btn-outline-light fs-6 px-4" href="./contactus.html">Contact Us</a>
           </div>
          </div>
-         <div class="col-lg-2 d-none d-lg-block ps-0 overflow-hidden imgla-csoz">
+         <div class="col-lg-2 d-none d-lg-block ps-0 overflow-hidden imgla-csoz bgimglet-gsp">
             <!-- background image has been set using css -->
          </div>
        </div>
@@ -667,11 +667,11 @@
                 <h5 class="text-light fw-bold">Quick Links</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Home</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Services</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Portfolio</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">About</a></li>
-                <li class="p-2"><a href="#" class="text-decoration-none text-light">Contact Us</a></li>
+                <li class="py-2"><a href="./index.html" class="text-decoration-none text-light">Home</a></li>
+                <li class="py-2"><a href="./services.html" class="text-decoration-none text-light">Services</a></li>
+                <li class="py-2"><a href="./portfolio.html" class="text-decoration-none text-light">Portfolio</a></li>
+                <li class="py-2"><a href="./aboutus.html" class="text-decoration-none text-light">About</a></li>
+                <li class="py-2"><a href="./contactus.html" class="text-decoration-none text-light">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
@@ -679,12 +679,12 @@
                 <h5 class="text-light fw-bold">Services</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="text-light p-2">Development and Consultancy</li>
-                <li class="text-light p-2">Cloud Migration</li>
-                <li class="text-light p-2">Ecommerce</li>
-                <li class="text-light p-2">Web Development</li>
-                <li class="text-light p-2">UI/UX Design</li>
-                <li class="text-light p-2">SEO Service</li>
+                <li class="text-light py-2">Development and Consultancy</li>
+                <li class="text-light py-2">Cloud Migration</li>
+                <li class="text-light py-2">Ecommerce</li>
+                <li class="text-light py-2">Web Development</li>
+                <li class="text-light py-2">UI/UX Design</li>
+                <li class="text-light py-2">SEO Service</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
