--- a/aboutus.html
+++ b/aboutus.html
@@ -260,21 +260,14 @@
 
     <!-- footer -->
     <footer class="footer-csoz bg-darkblue text-lg-start pt-5">
-      <div class="footertop-csoz container-fluid text-center text-sm-start">
-        <div class="container-xl py-4">
+      <div class=" footertop-csoz container-fluid text-center text-sm-start">
+        <div class="container-xl  py-4">
           <div class="row g-3 justify-content-between">
             <div class="col-12 col-sm-6 col-md-2 p-2 p-md-1">
               <div class="mb-4">
-                <img
-                  src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png"
-                  class="img-fluid"
-                  alt="footer flexiata"
-                />
+                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png" class="img-fluid" alt="footer flexiata">
               </div>
-              <p class="text-light lh-sm">
-                Summit7Agency is Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Vestibu eget iaculis purus
-              </p>
+              <p class="text-light lh-sm">Summit7Agency is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibu eget iaculis purus</p>
               <div class="row mt-4">
                 <div class="col px-0 py-1">
                   <a href="#" class="d-inline-block">
@@ -311,27 +304,11 @@
                 <h5 class="text-light fw-bold">Quick Links</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light">Home</a>
-                </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
-                    >Services</a
-                  >
-                </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
-                    >Portfolio</a
-                  >
-                </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light">About</a>
-                </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
-                    >Contact Us</a
-                  >
-                </li>
+                <li class="py-2"><a href="./index.html" class="text-decoration-none text-light">Home</a></li>
+                <li class="py-2"><a href="./services.html" class="text-decoration-none text-light">Services</a></li>
+                <li class="py-2"><a href="./portfolio.html" class="text-decoration-none text-light">Portfolio</a></li>
+                <li class="py-2"><a href="./aboutus.html" class="text-decoration-none text-light">About</a></li>
+                <li class="py-2"><a href="./contactus.html" class="text-decoration-none text-light">Contact Us</a></li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
@@ -339,33 +316,28 @@
                 <h5 class="text-light fw-bold">Services</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="text-light p-2">Development and Consultancy</li>
-                <li class="text-light p-2">Cloud Migration</li>
-                <li class="text-light p-2">Ecommerce</li>
-                <li class="text-light p-2">Web Development</li>
-                <li class="text-light p-2">UI/UX Design</li>
-                <li class="text-light p-2">SEO Service</li>
+                <li class="text-light py-2">Development and Consultancy</li>
+                <li class="text-light py-2">Cloud Migration</li>
+                <li class="text-light py-2">Ecommerce</li>
+                <li class="text-light py-2">Web Development</li>
+                <li class="text-light py-2">UI/UX Design</li>
+                <li class="text-light py-2">SEO Service</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
               <div class="mb-4">
                 <h5 class="text-light fw-bold">Contact Info</h5>
               </div>
-              <div
-                class="d-flex text-light justify-content-center justify-content-sm-start"
-              >
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
                 <i class="bi bi-geo-alt me-3"></i>
-                <p>33 Tullimbar Circuit <br />Vermont South VIC 3133</p>
+                <p>33 Tullimbar Circuit
+                  <br/>Vermont South VIC 3133</p>
               </div>
-              <div
-                class="d-flex text-light justify-content-center justify-content-sm-start"
-              >
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
                 <i class="bi bi-telephone me-3"></i>
                 <p>(+61) 3 9119 3003</p>
               </div>
-              <div
-                class="d-flex text-light justify-content-center justify-content-sm-start"
-              >
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
                 <i class="bi bi-envelope me-3"></i>
                 <p>hello@flexiata.com</p>
               </div>
@@ -375,10 +347,9 @@
       </div>
       <div class="container-fluid py-4">
         <div class="container-xl text-center">
-          <p class="text-light m-0">
-            Copyrights 2022 © Flexiata. All Rights Reserved. ABN: 91646783646
-          </p>
+          <p class="text-light m-0">Copyrights 2022 © Flexiata. All Rights Reserved. ABN: 91646783646</p>
         </div>
+
       </div>
     </footer>
 
