--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -173,7 +173,7 @@
             <div class="col-12 col-sm-6 col-md-2 p-2 p-md-1">
               <div class="mb-4">
                 <img
-                  src="../assets/img/footer/Final-logo-NEW-01 (1) 2.png"
+                  src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png"
                   class="img-fluid"
                   alt="footer flexiata"
                 />
@@ -218,24 +218,36 @@
                 <h5 class="text-light fw-bold">Quick Links</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light">Home</a>
+                <li class="py-2">
+                  <a href="./index.html" class="text-decoration-none text-light"
+                    >Home</a
+                  >
                 </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
+                <li class="py-2">
+                  <a
+                    href="./services.html"
+                    class="text-decoration-none text-light"
                     >Services</a
                   >
                 </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
+                <li class="py-2">
+                  <a
+                    href="./portfolio.html"
+                    class="text-decoration-none text-light"
                     >Portfolio</a
                   >
                 </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light">About</a>
+                <li class="py-2">
+                  <a
+                    href="./aboutus.html"
+                    class="text-decoration-none text-light"
+                    >About</a
+                  >
                 </li>
-                <li class="p-2">
-                  <a href="#" class="text-decoration-none text-light"
+                <li class="py-2">
+                  <a
+                    href="./contactus.html"
+                    class="text-decoration-none text-light"
                     >Contact Us</a
                   >
                 </li>
@@ -246,12 +258,12 @@
                 <h5 class="text-light fw-bold">Services</h5>
               </div>
               <ul class="p-0 list-unstyled">
-                <li class="text-light p-2">Development and Consultancy</li>
-                <li class="text-light p-2">Cloud Migration</li>
-                <li class="text-light p-2">Ecommerce</li>
-                <li class="text-light p-2">Web Development</li>
-                <li class="text-light p-2">UI/UX Design</li>
-                <li class="text-light p-2">SEO Service</li>
+                <li class="text-light py-2">Development and Consultancy</li>
+                <li class="text-light py-2">Cloud Migration</li>
+                <li class="text-light py-2">Ecommerce</li>
+                <li class="text-light py-2">Web Development</li>
+                <li class="text-light py-2">UI/UX Design</li>
+                <li class="text-light py-2">SEO Service</li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
