removed ovreflow issue

--- a/services.html
+++ b/services.html
@@ -202,7 +202,7 @@
     </section>
 
     <section class="position-relative bg-secondary sectionTwo-gsp">
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light rounded m-0 secT-gsp">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -262,7 +262,7 @@
     </section>
 
     <section class="bg-secondary sectionThree-gsp">
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light rounded m-0 secTh-gsp">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -319,7 +319,7 @@
     </section>
 
     <section class="bg-secondary sectionFourth-gsp">
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light rounded m-0 secfr-gsp">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -378,7 +378,7 @@
         />
       </div>
 
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light m-0 rounded secff-gsp">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -431,7 +431,7 @@
     </section>
 
     <section class="bg-secondary sectionSixth-gsp">
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light m-0 rounded secsx-gsp">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -482,7 +482,7 @@
     </section>
 
     <section class="bg-secondary position-relative sectionSeventh-gsp">
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 overflow-hidden">
         <div class="row justify-content-center bg-light m-0 rounded secsv-gsp">
           <div
             class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
@@ -544,7 +544,7 @@
     </section>
 
     <section class="bg-secondary pb-5 sectionEight-gsp">
-      <div class="container-xl py-5">
+      <div class="container-xl py-5 overflow-hidden">
         <div class="row justify-content-center bg-light m-0 rounded secei-gsp">
           <div
             class="col-md-5 order-md-2 py-3 py-md-5 px-2 px-md-5 d-flex justify-content-center align-items-center"
