--- a/portfolio.html
+++ b/portfolio.html
@@ -76,18 +76,18 @@
     <!-- hero section -->
     <section class="bg-secondary d-flex justify-content-center">
       <div
-        class="hero-csoz heroport-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
+        class="hero-csoz heroport-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3"
       >
         <div
           class="herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 position-relative"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex my-5">
+          <div class="werow-csoz d-flex my-5 banner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">Portfolio</h5>
           </div>
-          <h3 class="text-altlight fw-bold">Our Case Studies</h3>
-          <p class="lh-base w-50">
+          <h3 class="text-altlight fw-bold mainText-gsp">Our Case Studies</h3>
+          <p class="lh-base w-50 mainText-gsp">
             View some of our work and case studies for clients. From startups to
             global brands we help organisations. Create products people love to
             use.
@@ -105,7 +105,7 @@
             role="tablist"
           >
             <button
-              class="nav-link fw-bold tablink-csoz active"
+              class="nav-link fw-bold tablink-csoz butanipo-gsp active"
               id="nav-home-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-home"
@@ -118,7 +118,7 @@
             </button>
 
             <button
-              class="nav-link tablink-csoz fw-bold"
+              class="nav-link tablink-csoz fw-bold butanipo-gsp"
               id="nav-profile-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-profile"
@@ -131,7 +131,7 @@
             </button>
 
             <button
-              class="nav-link tablink-csoz fw-bold"
+              class="nav-link tablink-csoz fw-bold butanipo-gsp"
               id="nav-contact-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-contact"
@@ -143,7 +143,7 @@
               ECommerce
             </button>
             <button
-              class="nav-link tablink-csoz fw-bold"
+              class="nav-link tablink-csoz fw-bold butanipo-gsp"
               id="nav-contact-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-contact"
@@ -155,7 +155,7 @@
               Mobile Development
             </button>
             <button
-              class="nav-link tablink-csoz fw-bold"
+              class="nav-link tablink-csoz fw-bold butanipo-gsp"
               id="nav-contact-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-contact"
@@ -167,7 +167,7 @@
               Web
             </button>
             <button
-              class="nav-link tablink-csoz fw-bold"
+              class="nav-link tablink-csoz fw-bold butanipo-gsp"
               id="nav-contact-tab"
               data-bs-toggle="tab"
               data-bs-target="#nav-contact"
@@ -192,7 +192,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 489.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -201,7 +201,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 490.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -210,7 +210,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 491.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -219,7 +219,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 492.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -228,7 +228,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 493.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -237,7 +237,7 @@
                 <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 494.png"
-                    class="img-fluid w-100"
+                    class="img-fluid w-100 imganipo-gsp"
                     alt=""
                   />
                 </a>
@@ -516,6 +516,21 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <!-- gsap CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
+      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/animation/portfolio.js"></script>
   </body>
 </html>
