added about animations

--- a/aboutus.html
+++ b/aboutus.html
@@ -78,15 +78,15 @@
           class="col-lg-7 herocol-csoz d-flex flex-column justify-content-center align-items-start  text-start pe-sm-0 pt-2"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex my-5">
+          <div class="werow-csoz d-flex my-5 banner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">About &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">Us</h5>
           </div>
-          <h2 class="text-altlight fw-bold mb-4">Our Story</h2>
-          <p class="lh-lg">
+          <h2 class="text-altlight fw-bold mb-4 mainText-gsp">Our Story</h2>
+          <p class="lh-lg mainText-gsp">
             Flexiata stands out as a young, dynamic group of IT professionals who understand what the digital era and digital transformation in the modern world is. This team is led by a group of highly skilled professionals with over 15 years of industry experience based in Australia. They were able to nurture a team of highly capable software professionals with time. Formed in 2017, we have attracted a champion team with diverse tech and business backgrounds, with experience in numerous domains.
           </p>
-          <p class="lh-lg">
+          <p class="lh-lg mainText-gsp">
               Our experience ranges all the way from catering to startups businesses and veterans across industry vertices. We have always worked as a strategic tech partner to businesses and individuals who are in need of a tech team. Flexiata functions by having a team dedicated to each step of the process, who eventually works together to deliver robust masterpieces of functional code with initiative designs.
           </p>
         </div>
@@ -94,7 +94,7 @@
           class="heroimge-csoz col-lg-5 justify-content-center align-items-center d-flex ps-lg-0 pb-5 pb-lg-0"
         >
         <div>
-            <img src="./assets/img/Final-logo-large.png" alt="flexiata" class="img-fluid">
+            <img src="./assets/img/Final-logo-large.png" alt="flexiata" class="img-fluid heroimg-gsp">
         </div>
       </div>
           </div>
@@ -131,42 +131,42 @@
 
       
       <!-- save time and effort -->
-      <section class="bg-secondary pt-5">
-        <div class="container-xl">
+      <section class="bg-secondary pt-5 sectionOne-gsp">
+        <div class="container-xl overflow-hidden">
             <div class="row py-5">
               <div class="position-relative col-sm-6 col-md-4 d-flex align-items-center justify-content-evenly flex-column">
                 <div class="position-relative">
-                  <h2 class=" fw-bold mb-4">Save Time & Effort With the Flexiata</h2>
-                  <div class="borderc-csoz">
+                  <h2 class=" fw-bold mb-4 titleani-gsp">Save Time & Effort With the Flexiata</h2>
+                  <div class="borderc-csoz bor-gsp">
                     <!-- border -->
                   </div>
                 </div>
-                <img src="./assets/img/chooseUs/02.png" class="img-fluid py-3" alt="Save Time & Effort">
+                <img src="./assets/img/chooseUs/02.png" class="img-fluid py-3 imgsec-gsp" alt="Save Time & Effort">
               </div>
                 <div class="col-sm-6 col-md-8">
                     <div class="row">
-                        <div class="mb-4">
+                        <div class="mb-4 rowani-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
                               </div>
                               <p>Flexiata members are from the top IT colleges and software companies in the region and bring valuable real world experience to our team. </p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowani-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing </h5>
                               </div>
                               <p>We at Flexiata will guarantee that the clients will always get more than the money they spend.</p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowani-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
                               </div>
                               <p>THaving a highly qualified staff on board, makes it easy for us to accommodate the demands of any project you may have while adhering to the strictest time deadlines.</p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowani-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
@@ -180,33 +180,33 @@
       </section>
 
       <!-- how we work section -->
-      <section class="bg-light position-relative">
-        <div class="container-xl">
+      <section class="bg-light position-relative sectionTwo-gsp">
+        <div class="container-xl overflow-hidden">
             <div class="row py-5">
                 <div class="col-sm-6 col-md-8 order-2 order-sm-1">
                     <div class="row">
-                        <div class="mb-4">
+                        <div class="mb-4 rowaniT-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">We Work With a Vision</h5>
                               </div>
                               <p>You will love our unique customer journey that extends all the way starting with formulating and realizing your optimal digital strategy.</p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowaniT-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">We Formulate a Plan</h5>
                               </div>
                               <p>Commencing from customer onboarding, summiting up to design, development, quality assurance to project handover, we keep things transparent and ensure on-time deliveries.</p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowaniT-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Form Long Term Solutions</h5>
                               </div>
                               <p>The tech solutions we offer are maintainable, stable, scalable, and carefully crafted to survive the long run, with dynamic infrastructure.</p>
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-4 rowaniT-gsp">
                             <div class="d-flex align-items-center mb-3">
                                 <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                                   <h5 class="fw-bold text-altlight m-0 ms-3">Collaboration is Key</h5>
@@ -217,44 +217,43 @@
                 </div>
                 <div class="col-sm-6 col-md-4 d-flex align-items-start align-items-sm-end justify-content-evenly flex-column order-1 order-sm-2">
                   <div class="position-relative">
-                    <h2 class="fw-bold text-end">How We Work</h2>
-                    <div class="borderca-csoz d-none d-sm-block">
+                    <h2 class="fw-bold text-end titleaniT-gsp">How We Work</h2>
+                    <div class="borderca-csoz d-none d-sm-block borT-gsp">
                       <!-- border -->
                     </div>
-                    <div class="borderc-csoz d-block d-sm-none">
+                    <div class="borderc-csoz d-block d-sm-none borT-gsp">
                       <!-- border -->
                     </div>
                   </div>
-                  <img src="./assets/img/chooseUs/01.png" class="img-fluid py-3" alt="how we work">
+                  <img src="./assets/img/chooseUs/01.png" class="img-fluid py-3 imgsecT-gsp" alt="how we work">
               </div>
             </div>
         </div>
       </section>
 
        <!-- lets start section -->
-   <section class="bg-secondary pb-5">
+   <section class="bg-light pb-5 position-relative eight-section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-2 d-none d-lg-flex justify-content-center align-items-center position-relative">
-         <div class="werow-csoz serrow-csoz d-flex rota-csoz">
+         <div class="werow-csoz serrow-csoz d-flex rota-csoz letbanner-gsp">
            <h5 class="fw-bold fs-6 text-uppercase">JUST &nbsp;</h5>
            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
               ASK 
            </h5>
          </div>
         </div>
-        <div class="col-12 col-lg-8 pe-lg-0">
+        <div class="col-12 col-lg-8 pe-lg-0 letsMainc-gsp">
          <div class="rounded p-5 text-center text-light letscs-csoz">
-           <h1>Let’s start our <span>first step</span> to grow together </h1>
-           <p>Do you know what it takes to grow your business online? Do you want to?</p>
+           <h1 class="lets-gsp">Let’s start our <span>first step</span> to grow together </h1>
+           <p>Do you know what it takes to grow your business online? <br/>Do you want to?</p>
            <a class="btn btn-outline-light fs-6 px-4" href="./contactus.html">Contact Us</a>
          </div>
         </div>
-        <div class="col-lg-2 d-none d-lg-block ps-0 overflow-hidden imgla-csoz">
+        <div class="col-lg-2 d-none d-lg-block ps-0 overflow-hidden imgla-csoz bgimglet-gsp">
            <!-- background image has been set using css -->
         </div>
       </div>
-      
     </div>
   </section>
 
@@ -358,6 +357,20 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <!-- gsap CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
+      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/animation/about.js"></script>
   </body>
 </html>
